tiny avatar overflow fix to preserve border radius

--- a/client/src/components/Avatar/Avatar.css
+++ b/client/src/components/Avatar/Avatar.css
@@ -94,5 +94,6 @@
         height: 0;
         border: 2px solid var(--dark-theme-color);
         border-radius: 999px;
+        overflow: hidden;
     }
 }
